--- a/public/big.css
+++ b/public/big.css
@@ -57,11 +57,11 @@ img {
   line-height:110%;
   letter-spacing:0;
 }
-.gist code {
+.code code {
   font-family: 'Cutive Mono', Mono;
   text-shadow:0px 0px 5px rgba(0,0,0,0.2);
 }
-.gist pre {
+.code pre {
   font-family: 'Cutive Mono', Mono;
   background-color:aliceblue;
   border: 5px dashed lightsteelblue;
