--- a/public/big.css
+++ b/public/big.css
@@ -1,8 +1,8 @@
 body {
-  background: url("img/_grey.png");
+  background:url("img/_grey.png");
   background-size:contain;
   color:royalblue;
-  font-family: 'Carter One', verdana, sans-serif;
+  font-family: 'Carter One', Verdana, sans-serif;
   font-weight:400;
   letter-spacing:-5px;
   margin:0;
