--- a/src/big.css
+++ b/src/big.css
@@ -1,5 +1,5 @@
 body {
-  background:url("img/_grey.png");
+  background:url("img/grey.png");
   background-size:contain;
   color:royalblue;
   font-family: 'Carter One', Verdana, sans-serif;
